[package]
name = "amffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Rust bindings to Advanced Media Framework"
keywords = ["amd", "graphics", "audio", "video", "ffi"]
categories = ["multimedia", "external-ffi-bindings"]
repository = "https://github.com/AlsoSylv/amffi"

[lib]

[features]
default = ["ash"]
ash = ["dep:ash"]
opencl3 = ["dep:opencl3"]

[dependencies]
ash = { version = "0.38.0", default-features = false, optional = true }
libloading = { version = "0.9.0", default-features = false }
opencl3 = { version = "0.12.3", optional = true, default-features = false, features = ["dynamic"]}
widestring = { version = "1.2.1" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
]
